# al-mirsal

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  __init__.py  apps.py  mixins.py  models.py  permissions.py  pyproject.toml  requirements.txt  routers.py  serializers.py  tests.py  urls.py  views.py
al_mirsal/: __init__.py  apps.py  consumers.py  mixins.py  permissions.py  routing.py  urls.py
channel/: apps.py  models.py  serializers.py  urls.py  views.py
channels/: apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
chats/: apps.py  mixins.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
dar_al_salam/: __init__.py  apps.py  mixins.py  permissions.py  urls.py
forwards/: __init__.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
groups/: __init__.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
links/: __init__.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
members/: __init__.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
migrations/: 0001_initial.py  0002_alter_user_options_remove_user_phone_index_and_more.py  0002_user_channels_user_chat_groups_user_chats.py
msgs/: __init__.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
reactions/: __init__.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
stories/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
subscribers/: __init__.py  apps.py  (+6 more)
(+131 files in other folders)
